# prga

./: .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  LICENSE  README.md  trasj.py
.github/actions/core_install/: action.yml
.github/actions/iverilog_install/: action.yml
.github/actions/run_example/: action.yml
.github/actions/vtr_install/: action.yml
.github/actions/yosys_install/: action.yml
.github/workflows/: checkinstall.yml  dev-install.yml  quickcheck.yml
bitgen/: CMakeLists.txt
bitgen/bitchain/: CMakeLists.txt
bitgen/bitchain/include/: pack_impl.hpp
bitgen/bitchain/src/: bitstream_impl.cpp  pack_impl.cpp
bitgen/shared/: CMakeLists.txt
bitgen/shared/include/: bitstream.hpp  configdb.hpp  pack.hpp
bitgen/shared/src/: pack.cpp  util.cpp
cocotb/fifo/: Makefile  a.out  prga_fifo.tb.v  prga_fifo.v  prga_fifo_cocotb.py  prga_fifo_cocotb_BACKUP_12702.py  prga_fifo_cocotb_BASE_12702.py  prga_fifo_cocotb_LOCAL_12702.py  prga_fifo_cocotb_REMOTE_12702.py  prga_fifo_lookahead_buffer.v  prga_fifo_tb_wrapper.v  results.xml  test.vcd
cocotb/fifo/iverilog/: dump.vcd  out  prga_fifo.tb.v  prga_fifo.v  prga_fifo_iverilog  prga_fifo_lookahead_buffer.v  prga_ram_1r1w.v
cocotb/fifo/sim_build/: sim.vvp
cocotb/fifo_lookahead/: Makefile  config.py  fifo.v  fifo_cocotb.py  fifo_lookahead_buffer.v  fifo_tb,v  fifo_tb.v  fifo_wrapper.v  prga_fifo_cocotb.py  ram_1r1w.v  results.xml
cocotb/fifo_lookahead_to_nonlookahead/: Makefile  fifo.v  fifo_cocotb.py  fifo_lookahead_buffer.v  fifo_tb.v  fifo_wrapper.v  ram_1r1w.v  results.xml
cocotb/fifo_nl_to_lookahead/: fifo_cocotb.py  fifo_tb.v  fifo_wrapper.v
cocotb/fifo_non_lookahead/: Makefile  a.out  fifo.v  fifo_cocotb.py  fifo_tb.v  results.xml
cocotb/fifo_non_lookahead_to_lookahead/: a.out  dump.vcd  fifo_cocotb.py  fifo_tb.v  fifo_wrapper.v  results.xml
cocotb/fifo_non_lookahead_to_lookahead/sim_build/: sim.vvp
cocotb/fle/: Makefile  build.py  config.py  dump.vcd  render.py  results.xml  test.py
cocotb/fle/cocotb_test/: Makefile  dump.vcd  results.xml  test.pckl  test.py
cocotb/fle/rtl/: fle6.v
cocotb/fle/sim_build/: sim.vvp
cocotb/fle/templates/: Makefile.tmpl  config.py  test.tmpl.py
cocotb/lut/: Makefile  build.py  render.py  results.xml  test.py
cocotb/lut/cocotb_test/: Makefile  dump.vcd  results.xml  test.pckl  test.py
cocotb/lut/rtl/: lut4.v  lut_tb.v
cocotb/lut/templates/: test.tmpl.py
cocotb/ram/: Makefile  ram.v  ram.v.out  ram_test.py  results.xml  test.vcd
cocotb/ram/sim_build/: sim.vvp
docs/: .gitignore  Makefile  conf.py  index.rst  intro.rst
docs/prga-builder/: prga._archdef.array.array.rst  prga._archdef.array.instance.rst  prga._archdef.array.rst  prga._archdef.array.tile.rst  prga._archdef.block.abstractblock.rst  prga._archdef.block.block.rst  prga._archdef.block.ioblock.rst  prga._archdef.block.logicblock.rst  prga._archdef.block.port.rst  prga._archdef.block.rst  prga._archdef.block.slice.rst  prga._archdef.common.rst  prga._archdef.model.builtin.rst  prga._archdef.model.custom.rst  prga._archdef.model.physical.rst  prga._archdef.model.port.rst  prga._archdef.model.rst  prga._archdef.model.switch.rst  prga._archdef.moduleinstance.common.rst  prga._archdef.moduleinstance.configurable.rst  prga._archdef.moduleinstance.instance.rst  prga._archdef.moduleinstance.module.rst  prga._archdef.moduleinstance.rst  prga._archdef.portpin.bit.rst  prga._archdef.portpin.bus.rst  prga._archdef.portpin.common.rst  prga._archdef.portpin.pin.rst  prga._archdef.portpin.port.rst  prga._archdef.portpin.reference.rst  prga._archdef.portpin.rst  prga._archdef.primitive.builtin.rst  prga._archdef.primitive.custom.rst  prga._archdef.primitive.port.rst  prga._archdef.primitive.rst  prga._archdef.primitive.switch.rst  prga._archdef.routing.abstractblock.rst  prga._archdef.routing.block.rst  prga._archdef.routing.common.rst  prga._archdef.routing.connectionblock.rst  prga._archdef.routing.port.rst  (+54 more)
docs/source/: arch.rst  build_your_custom_fpga.rst  conf.py  faq.rst  fpga_primer.rst  index.rst  intro.rst  quickstart.rst  requirements.txt  unit_testing.rst  workflow.rst
docs/source/dev/: arch.rst
docs/source/prga.py/: modules.rst  prga.algorithm.design.array.rst  prga.algorithm.design.cbox.rst  prga.algorithm.design.physical.rst  prga.algorithm.design.rst  prga.algorithm.design.sbox.rst  prga.algorithm.design.switch.rst  prga.algorithm.design.tile.rst  (+191 more)
envscr/: 69a8e95.patch  activate  general.settings.sh  install  run  settings.sh  settings.vm.sh  vm.settings.sh
examples/: Makefile
examples/fpga/: .gitignore  Makefile.in
examples/longsegment/: bcd2bin_host.v  build.py
examples/naive/: build.py  gate_host.v  io.pads
examples/small/: bcd2bin_host.v  build.py
prga/: __init__.py  context.py  exception.py  flow.py  requirements.txt
prga-bitgen/bitchain/: CMakeLists.txt
prga-bitgen/bitchain/include/: bitstream_impl.hpp
prga-bitgen/bitchain/src/: bitstream_impl.cpp
prga-bitgen/shared/: CMakeLists.txt
prga-bitgen/shared/include/: bitstream.hpp  synth.hpp  util.hpp
prga-bitgen/shared/src/: bitstream.cpp  configdb.cpp  main.cpp  pack.cpp  synth.cpp
prga-builder/: README.md
prga-builder/prga/: __init__.py  compatible.py  exception.py  flow.py  requirements.txt
prga-builder/proto/: CMakeLists.txt  __init__.py
prga/_archdef/: __init__.py  common.py
prga/_configcircuitry/: __init__.py  common.py
prga/_context/: __init__.py  context.py  finalization.py  flow.py
prga/_optimization/: __init__.py
prga/_rtlgen/: __init__.py  verilog.py
prga/_timing/: __init__.py  common.py  randomtiming.py
prga/_util/: __init__.py  util.py  xml.py
prga/_vpr/: __init__.py  archdef.py  extension.py  rrgraph.py
prga/tools/: ioremap.py
proto/: bitchain.proto  common.proto
proto/bitchain/: bitchain.proto
proto/common/: common.proto
website/: .gitignore  404.html  Gemfile  Makefile  README.md  _config.yml  index.markdown  publications.markdown
website/_data/: navigation.yml
website/_includes/: feature_row  feature_section
website/_sass/: minimal-mistakes.scss
(+297 files in other folders)
